app/assets/stylesheets/modules/_service-standard-point.scss
.service-standard-point {

  $gutter-tablet: ($gutter * 1.5);  // 45px

  border-top: 1px solid $border-colour;
  margin-top: 1.5em;
  padding-top: 1.5em;

  &__title {
    @include bold-24;
    margin-bottom: 0.5em;
    margin-left: $gutter;

    @include media(tablet) {
      margin-left: $gutter-tablet;
    }
  }

  &__number {
    float: left;
    margin-left: -$gutter;

    @include media(tablet) {
      margin-left: -$gutter-tablet;
    }
  }

  &__details {
    @include core-19;
    margin-bottom: 0.5em;
    margin-left: $gutter;

    @include media(tablet) {
      margin-left: $gutter-tablet;
    }
  }

  &__link {
    margin-top: 0.5em;
  }
}

